# figma-bridge-webapp

./: .env.example  .gitignore  PRD.md  README.md  app.py  main.py  pyproject.toml
templates/: index.html
